# arcane

./: .gitignore  README.md  arcane.spec  environment.yml  logo.icns  pyproject.toml  setup.sh  setup_ml.sh
.github/workflows/: macos_build.yml
docs/: BUILD_IMAGE.md  ML_EXPLAINED.md
src/: main.py
src/core/: analysis_cache.py  device_manager.py  grouper.py  image_analyzer.py  image_loader.py  metadata_manager.py
src/gui/: gui_manager.py  texture_manager.py
src/ml/: download_models.py  embedding_extractor.py  eye_detector.py  face_detector.py  face_recognizer.py  focus_detector.py  model_manager.py  semantic_analyzer.py
tests/: debug_grouping.py  test_grouper.py  verify_grouping.py  verify_scores.py
